--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,6 +10,8 @@
  *
 */
 
+$link-color: blue; 
+
 @import "vendor/breakpoint/breakpoint"; // media query mixins
 @import "variables";
 @import "mixins";
