--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,6 +11,7 @@
 */
 
 $link-color: blue; 
+$background-color: black;
 
 @import "vendor/breakpoint/breakpoint"; // media query mixins
 @import "variables";
